# KZEngine

./: .gitignore  NamingConventions.txt  README.md  git.gitignore
OpenGLDemo/: CMakeLists.txt
OpenGLDemo/include/glad/: glad.h
OpenGLDemo/lib/: glfw3.lib
OpenGLDemo/srcs/: CMakeLists.txt  MyFShader.fs  MyVShader.vs  Shader.cpp  Shader.h  camera.cpp  camera.h  cube_fshader.fs  glad.c  main.cpp  stb_image.h
SoftEngine/: CMakeLists.txt
SoftEngine/3DEngine/: CMakeLists.txt  Image.cpp  bhv.cpp  bhv.h  bsp.cpp  bsp.h  camera.cpp  camera.cpp~RF839424.TMP  camera.h  image.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  pass.cpp  pass.h  pipeline.cpp  pipeline.h  renderlist.cpp  renderlist.h  terrian.cpp  terrian.h  test.cpp
SoftEngine/KZMath/: CMakeLists.txt  fix32.cpp  fix32.h  main.cpp  matrix.cpp  matrix.h  quat.cpp  quat.h  util.cpp  util.h  vector.cpp  vector.h
